# potato-disease

./: .breakpoints  LICENSE  README.md  app.py  pyproject.toml
static/css/: main.css
templates/: base.html  home.html  index.html
