[tool.poetry]
name = "repl_nix_potato-disease"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Pillow = "^9.4.0"
requests = "^2.28.2"
Flask-SQLAlchemy = "^3.0.3"
keras = "^2.12.0"
numpy = "^1.24.2"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
